Completion of Application Views, as well as ongoing wiring controllers for application logic. Also, implementation of business models and design of abstract repositories with fake data for testing